[bdist_wheel]
universal = 0

[metadata]
requires_dist =
    pandas
    requests

#https://pylint.pycqa.org/en/latest/user_guide/run.html
[pylint.FORMAT]
max-line-length = 400

[pylint.MESSAGES CONTROL]
disable = logging-fstring-interpolation, f-string-without-interpolation, line-too-long, consider-using-dict-items